syntax = "proto3";

package monitorpb;
option go_package = ".monitor";

// 请求信息
message EmptyRequest {
  string name = 1;
}

message StatusResponse {
  int32 port = 1;
  string ip = 2;
  string status = 3; // health / unhealthy
  uint64 available_mem = 4;
  double cpu_idle_time = 5;
  string name = 6;
  double request_count = 7;
  double request_duration = 8;
}

service MonitoringService{
  rpc GetStatus(EmptyRequest) returns (StatusResponse);
}